--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
     <body>
         <div id= "wrapper">
-
+            <div id="currentTime"></div>
+            <div id="questionsDiv">
+                <h1>Test your coding knowledge!</h1>
+                <p>Answer the questions within the time limit, 
+                    incorrect answers will result in a time penalty.</p>
+                <ul id= "choicesUl"></ul>
+                <button id= "startTime">Start Quiz</button>
+            </div>
         </div>
     </body>
 </html>
