--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coding Quiz</title>
+        <link rel="stylesheet" href="assets/style.css">
     </head>
 
     <body>
+        <a>High Scores Placeholder</a>  
         <div id= "wrapper">
             <div id="currentTime"></div>
             <div id="questionsDiv">
