Linkes js and added some css styling

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
                 <button id= "startTime">Start Quiz</button>
             </div>
         </div>
+
+        <script src="./assets/script.js"></script>
+
     </body>
 </html>
