--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <body>
         <a>High Scores Placeholder</a>  
+        <div id="currentTime">Current Time Placeholder</div>
         <div id= "wrapper">
-            <div id="currentTime"></div>
             <div id="questionsDiv">
                 <h1>Test your coding knowledge!</h1>
                 <p>Answer the questions within the time limit, 
