Added css styling

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
-        <a>High Scores Placeholder</a>  
-        <div id="currentTime">Current Time Placeholder</div>
+        <a>View High Scores</a>  
+        <div id="currentTime"></div>
         <div id= "wrapper">
             <div id="questionsDiv">
                 <h1>Test your coding knowledge!</h1>
