Added js for high scores page

--- a/highScores.html
+++ b/highScores.html
@@ -18,5 +18,6 @@
             <button id="clear" value="reset">Clear Highscore</button>
         </div>
     </div>
+    <script src="highScores.js"></script>
 </body>
 </html>
