--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <a>View High Scores</a>  
+        <link>View High Scores</link>  
         <div id="currentTime"></div>
         <div id= "wrapper">
             <div id="questionsDiv">
