--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <link>View High Scores</link>  
+        <a href="./highScores.html">View High Scores</a>  
         <div id="currentTime"></div>
         <div id= "wrapper">
             <div id="questionsDiv">
