--- a/highScores.html
+++ b/highScores.html
@@ -18,6 +18,6 @@
             <button id="clear" value="reset">Clear Highscore</button>
         </div>
     </div>
-    <script src="highScores.js"></script>
+    <script src="./assets/highScores.js"></script>
 </body>
 </html>
