--- a/highScores.html
+++ b/highScores.html
@@ -14,8 +14,10 @@
         <div id="questionsDiv">
             <h1>High Scores</h1>
             <ul id ="highScore"></ul>
-            <button id="goBack">Go Back</button>
-            <button id="clear" value="reset">Clear Highscore</button>
+            <div id="buttonBox">
+                <button id="goBack">Go Back</button>
+                <button id="clear" value="reset">Clear Highscore</button>
+            </div>
         </div>
     </div>
     <script src="./assets/highScores.js"></script>
