--- a/highScores.html
+++ b/highScores.html
@@ -12,11 +12,11 @@
     <div id="wrapper">
         <div id="currentTime"></div>
         <div id="questionsDiv">
-            <h1>High Scores</h1>
+            <h1>Scores</h1>
             <ul id ="highScore"></ul>
             <div id="buttonBox">
                 <button id="goBack">Go Back</button>
-                <button id="clear" value="reset">Clear Highscore</button>
+                <button id="clear" value="reset">Clear Scores</button>
             </div>
         </div>
     </div>
