--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     </head>
 
     <body>
-        <a href="./highScores.html">View High Scores</a>  
+        <a href="./highScores.html">View Scores</a>  
         <div id="currentTime"></div>
         <div id= "wrapper">
             <div id="questionsDiv">
                 <h1>Test your coding knowledge!</h1>
                 <p>Answer the questions within the time limit, 
                     incorrect answers will result in a time penalty.</p>
-                <ul id= "choicesUl"></ul>
-                <button id= "startTime">Start Quiz</button>
+                <button id= "startTime">Start</button>
             </div>
         </div>
 
