--- a/highScores.html
+++ b/highScores.html
@@ -15,7 +15,7 @@
             <h1>Scores</h1>
             <ul id ="highScore"></ul>
             <div id="buttonBox">
-                <button id="goBack">Go Back</button>
+                <button id="goBack">Back</button>
                 <button id="clear" value="reset">Clear Scores</button>
             </div>
         </div>
